# SpellSmut

./: .gitattributes  .gitignore  AUDIO_EXTRACTION_PLAN.md  CFF_EXTRACTION_SUMMARY.md  CFF_MODDING_GUIDE.md  CFF_QUICK_REFERENCE.md  CLAUDE.md  CRUSH.md  EDITOR_PLANNING.md  GITHUB_PAGES_CUSTOMIZATION.md  MODDING_PLAN.md  QUICK_START_ICON_EXTRACTION.md  QUICK_START_ICON_SYSTEM.md  QWEN.md  README.md  README_CFF_MODDING.md  RULES.md  Race_Creation_Guide.md  SOUND_SYSTEM_GUIDE.md  SpellForce_Multiplayer_FreeGame_Guide.md  UI_EXTRACTION_SUMMARY.md  UV_QUICK_REFERENCE.md  _config.yml  batch_extract_ui.py  cff_modding_examples.py  check-setup.sh  codebase_documentation.md  debug_armor_icons.py  debug_icon_path_resolution.py  extract_ui_batch.bat  organize_files.py  package-lock.json  pyproject.toml  pytest.ini  rotate_pngs.py  test_final_verification.py  test_full_editor.py  test_icon_integration.py  test_quest_ui.py  test_quest_widget.py  (+4 more)
.claude/: settings.local.json
.zed/: project-instructions.md
OriginalGameFiles/: 39540_install.vdf  LogChat.des  LogConsole.des  ReadMe.rtf  config.lua  gamepath.txt
ProjectPlanning/: ATLAS_EXTRACTION_SUMMARY.md  DATA_EXTRACTION_PLAN.md  EDITOR_PLANNING.md  GUI_EDITOR_PLAN.md  GUI_ICON_INTEGRATION_PLAN.md  GUI_ICON_INTEGRATION_SUMMARY.md  ICON_EXTRACTION_BEFORE_AFTER.md  ICON_EXTRACTION_STATUS.md  (+6 more)
TirganachReloaded/: CFF_EDITOR_README.md  FORMAT_COMPARISON.md  JSON_EXPORT_GUIDE.md  README.md  README_INSTALLATION.md  README_SCRIPTS.md  XML_EXPORT_GUIDE.md  __init__.py  create_enhanced_armor.py  create_mod.py  enhanced_armor.json  enhanced_weapons.json  example_use_json.py  export_to_xml.py  extract_armor_data.py  extracted_weapons.json  pyproject.toml  run_cff_editor.py  search_xml_data.py  test_armor_names.py  test_cff_extract.py  test_weapon_names.py
TirganachReloaded/cff_editor/: GUI_EDITOR_COMPLETE.md  __init__.py  data_model.py  main.py  main_window.py
TirganachReloaded/cff_editor/widgets/: __init__.py  dialog_branching_editor.py  element_table.py  property_editor.py  quest_details.py  quest_tree_editor.py
TirganachReloaded/gui_editor/: main.py
TirganachReloaded/gui_editor/utils/: __init__.py
TirganachReloaded/tirganach/: fields.py  structure.py
(+25627 files in other folders)
